--- a/site/index.html
+++ b/site/index.html
@@ -1,18 +1,6 @@
 <!doctype html>
-<html class="no-js" lang="">
+<html>
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>${1}</title>
-    <meta name="description" content="${2}">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <link rel="manifest" href="site.webmanifest">
-    <link rel="apple-touch-icon" href="icon.png">
-
-
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/main.css">
     <title>Hello Coursera-Github</title>
 </head> 
 <body>
