--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,6 @@
     <title>Hello Coursera-Github</title>
 </head> 
 <body>
-    <p>Hello world! This is HTML5 Boilerplate.</p>
+    <h1>Hello world! This is HTML5 Boilerplate.</h1>
 </body>
 </html>
